[tool.poetry]
name = "pych-client"
version = "0.2.2"
description = ""
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dioptra-io/pych-client"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"
orjson = {version = "^3.6.6", optional = true}

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
mypy = "^0.931"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
pytest-cov = "^3.0.0"
types-orjson = "^3.6.2"

[tool.poetry.extras]
orjson = ["orjson"]

[tool.poetry.scripts]
pych-client = 'pych_client.cli:main'

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
implicit_reexport = false
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
