[tool.poetry]
name = "pych-client"
version = "0.3.1"
description = "A ClickHouse client for Python, with a command-line interface."
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dioptra-io/pych-client"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
orjson = {version = "^3.6.7", optional = true}

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
types-orjson = "^3.6.2"

[tool.poetry.extras]
orjson = ["orjson"]

[tool.poetry.scripts]
pych-client = "pych_client.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:$",
    "if __name__ == \"__main__\":$",
    "pass$",
    "\\s\\.\\.\\.$",
    "raise NotImplementedError$"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
